# pyqt6-musicplayer

./: .gitignore  README.md  pyproject.toml
src/pyqt6_music_player/: button_mappings.py  config.py  constant.py  constants.py  context.py  exceptions.py  helpers.py  logging_config.py  main.py  main_view.py  signals.py  widgets.py
src/pyqt6_music_player/app/: __init__.py  context.py  main_view.py
src/pyqt6_music_player/audio/: __init__.py  audio_player_service.py  audio_player_worker.py
src/pyqt6_music_player/controllers/: __init__.py  mp_controller.py  music_player_controller.py
src/pyqt6_music_player/core/: __init__.py  config.py  constants.py  context.py  enums.py  playback_order_events.py  protocols.py  signals.py  widgets.py
src/pyqt6_music_player/features/: __init__.py
src/pyqt6_music_player/features/playback/: __init__.py  playback_navigator.py  playback_order.py  playback_service.py  playback_view.py  playback_viewmodel.py  playback_widgets.py  track_navigator.py
src/pyqt6_music_player/features/playlist/: __init__.py  playlist.py  playlist_service.py  playlist_view.py  playlist_viewmodel.py  playlist_widgets.py
src/pyqt6_music_player/features/volume/: __init__.py  (+4 more)
src/pyqt6_music_player/infra/: metadata_extractor.py
src/pyqt6_music_player/metadata/: __init__.py  metadata_extractor.py
src/pyqt6_music_player/models/: __init__.py  model.py  music_player_state.py  player.py  player_engine.py  playlist.py  song.py  song_model.py  track.py  volume.py
src/pyqt6_music_player/services/: __init__.py  playback_order.py  playback_service.py  playlist_service.py  track_navigator.py
src/pyqt6_music_player/track/: __init__.py  art_extractor.py  metadata_extractor.py  track.py
src/pyqt6_music_player/utils/: __init__.py  formatters.py  logging_config.py  metadata_extractor.py
src/pyqt6_music_player/view_models/: __init__.py  playback_viewmodel.py  playlist_viewmodel.py  viewmodel.py  volume_viewmodel.py
src/pyqt6_music_player/views/: __init__.py  base_widgets.py  buttons.py  cards.py  components.py  frames.py  helpers.py  labels.py  main_view.py  metadata_widgets.py  music_player_view.py  now_playing.py  now_playing_widgets.py  panels.py  playback.py  playback_control_buttons.py  playback_control_widgets.py  playback_progress_widgets.py  playlist.py  playlist_widgets.py  section_views.py  sections.py  sliders.py  subviews.py  volume.py  volume_widgets.py  widgets.py
styles/: styles.qss
tests/: conftest.py  custom_types.py  utils.py
tests/integration/: test_add_song_feature.py  test_song_select_feature.py  test_volume_feature.py
tests/unit/: test_audio_data.py  test_config.py  test_metadata_extractor.py
tests/unit/models/: test_audio_player.py  test_playlist_models.py  test_song_model.py  test_volume_model.py
tests/unit/state/: test_metadata_state.py  test_playlist_state.py  test_song.py  test_song_progress_state.py  test_volume_state.py
tests/unit/view_models/: test_viewmodel.py  test_volume_viewmodel.py
tests/unit/views/: test_views.py
(+5 files in other folders)
