[project]
name = "pyqt6-music-player"
version = "0.1.0"
description = ""
authors = [
    {name = "Dave",email = "davejoshua001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "numpy (>=2.3.4,<3.0.0)",
]

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
ignore_missing_imports = true

[tool.poetry]
packages = [{include = "pyqt6_music_player", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
mypy = "^1.17.1"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-qt = "^4.5.0"
pytest-mock = "^3.14.1"

[tool.ruff.lint]
select = [
    "F",    # pyflakes (logic errors)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint rules (important!)
    "RUF",  # Ruff-specific rules
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
